--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cuid": "^3.0.0",
+    "jose": "^5.2.3",
+    "jwt-decode": "^4.0.0",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.343.0",
     "next": "14.1.0",
-    "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.12",
+    "qs": "^6.12.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
@@ -47,6 +49,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
+    "@types/qs": "^6.9.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
