--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "jest": "^29.7.0",
     "postcss": "^8",
     "prettier": "^3.2.5",
+    "prisma": "^5.13.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
