--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,4 @@
 
-NEXT_APP_API_URL = ""
-NEXT_APP_API_TOKEN = ""
-NEXT_APP_API_URL = http://127.0.0.1:1338/api
-NEXT_PUBLIC_UPLOAD_URL = http://127.0.0.1:133
-
-
-
+# Database
+DATABASE_URL="postgresql://username:password@localhost:5432/dbname?schema=public"
 
