--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.0.0",
     "@hookform/resolvers": "^3.3.4",
+    "@prisma/client": "^5.13.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -57,6 +59,7 @@
     "jest": "^29.7.0",
     "postcss": "^8",
     "prettier": "^3.2.5",
+    "prisma": "^5.13.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
