--- a/package.json
+++ b/package.json
@@ -24,31 +24,32 @@
     "@tanstack/match-sorter-utils": "^8.11.8",
     "@tanstack/react-query": "^5.28.4",
     "@tanstack/react-table": "^8.13.2",
-    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cuid": "^3.0.0",
+    "jwt-decode": "^4.0.0",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.343.0",
     "next": "14.1.0",
     "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.12",
+    "qs": "^6.12.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.4.1",
-    "@types/bcryptjs": "^2.4.6",
     "@types/cookie": "^0.6.0",
     "@types/jest": "^29.5.12",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
+    "@types/qs": "^6.9.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
