--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.0.0",
+    "@aws-sdk/client-s3": "^3.490.0",
+    "@aws-sdk/lib-storage": "^3.490.0",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.13.0",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -27,21 +29,19 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cuid": "^3.0.0",
-    "jwt-decode": "^4.0.0",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.343.0",
     "next": "14.1.0",
     "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.12",
-    "qs": "^6.12.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz"
   },
   "devDependencies": {
     "@types/cookie": "^0.6.0",
