--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tanstack/match-sorter-utils": "^8.11.8",
     "@tanstack/react-query": "^5.28.4",
     "@tanstack/react-table": "^8.13.2",
+    "@trpc/client": "^10.45.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cuid": "^3.0.0",
@@ -40,8 +41,8 @@
     "react-hook-form": "^7.51.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4",
-    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz"
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/cookie": "^0.6.0",
