--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,58 @@
 {
-  "extends": ["next/babel","next/core-web-vitals", "prettier"]
-}
+    "parser": "@typescript-eslint/parser",
+    "plugins": ["@typescript-eslint/eslint-plugin", "fsd-vf"],
+    "extends": [
+      "next/core-web-vitals",
+      "plugin:@typescript-eslint/recommended",
+      "plugin:prettier/recommended"
+    ],
+    "rules": {
+      "prettier/prettier": "none",
+      "@typescript-eslint/no-unused-vars": "error",
+      "@typescript-eslint/no-explicit-any": "error",
+      "no-trailing-spaces": [2, { "skipBlankLines": false }],
+      "no-multiple-empty-lines": ["error", { "max": 1, "maxBOF": 1 }],
+      "object-curly-spacing": ["error", "always"],
+      "comma-spacing": [2, { "before": false, "after": true }],
+      "arrow-spacing": ["error", { "before": true, "after": true }],
+      "space-infix-ops": ["error", { "int32Hint": false }],
+      "space-after-keywords": "off",
+      "keyword-spacing": [2, { "before": true, "after": true }],
+      "react/jsx-indent": [2, 2, { "indentLogicalExpressions": true }],
+      "arrow-body-style": ["error", "as-needed"],
+      "padded-blocks": ["error", "never"],
+      "indent": ["error", 2],
+      "react/display-name": "off",
+      "react/self-closing-comp": [
+        "error",
+        {
+          "component": true,
+          "html": true
+        }
+      ],
+  
+      "fsd-vf/path-checker": ["error", { "alias": "@" }],
+  
+      "fsd-vf/layer-imports": [
+        "error",
+        {
+          "alias": "@",
+          "ignoreImportPatterns": ["**/StoreProvider", "**/testing"]
+        }
+      ],
+  
+      "fsd-vf/public-api-imports": [
+        "error",
+        {
+          "alias": "@",
+          "testFilesPatterns": [
+            "**/*.test.*",
+            "**/*.story.*",
+            "**/StoreDecorator.tsx"
+          ]
+        }
+      ],
+  
+      "react/jsx-tag-spacing": ["error", { "beforeSelfClosing": "always" }]
+    }
+  }
