--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/match-sorter-utils": "^8.11.8",
@@ -31,8 +33,8 @@
     "clsx": "^2.1.0",
     "cuid": "^3.0.0",
     "lodash-es": "^4.17.21",
-    "lucide-react": "^0.343.0",
-    "next": "14.1.0",
+    "lucide-react": "^0.381.0",
+    "next": "^14.2.3",
     "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.12",
