--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,7 @@
       "plugin:prettier/recommended"
     ],
     "rules": {
-      "prettier/prettier": "none",
+      "prettier/prettier": "2",
       "@typescript-eslint/no-unused-vars": "error",
       "@typescript-eslint/no-explicit-any": "error",
       "no-trailing-spaces": [2, { "skipBlankLines": false }],
