--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.0.0",
+    "@auth/prisma-adapter": "^2.2.0",
     "@aws-sdk/client-s3": "^3.490.0",
     "@aws-sdk/lib-storage": "^3.490.0",
     "@hookform/resolvers": "^3.3.4",
@@ -29,13 +29,14 @@
     "@tanstack/react-query": "^5.28.4",
     "@tanstack/react-table": "^8.13.2",
     "@trpc/client": "^10.45.2",
+    "bcrypt": "^5.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cuid": "^3.0.0",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.381.0",
     "next": "^14.2.3",
-    "next-auth": "^4.24.7",
+    "next-auth": "^5.0.0-beta.19",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.12",
     "react": "^18",
@@ -47,6 +48,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cookie": "^0.6.0",
     "@types/jest": "^29.5.12",
     "@types/lodash-es": "^4.17.12",
