--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tanstack/react-table": "^8.13.2",
     "@trpc/client": "^10.45.2",
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cuid": "^3.0.0",
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cookie": "^0.6.0",
     "@types/jest": "^29.5.12",
     "@types/lodash-es": "^4.17.12",
