--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/match-sorter-utils": "^8.11.8",
     "@tanstack/react-query": "^5.28.4",
     "@tanstack/react-table": "^8.13.2",
