--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,17 @@
 # Database
 DATABASE_URL="postgresql://username:password@localhost:5432/dbname?schema=public"
 
+NEXTAUTH_URL="http://localhost:3000"
+AUTH_SECRET=";ajsf;jasd8fp93kljm9a843kj;lakjd9874-09j;ladkjf0s"
+NEXT_PUBLIC_API_URL="http://localhost:3000"
+
+YANDEX_CLIENT_ID="198d88f30863474a9091524f1757325a"
+YANDEX_CLIENT_SECRET="47a0c5b85f714f4b81d9fb8d264bb427"
+
+
+# Database
+DATABASE_CLIENT=postgres
+DATABASE_PORT=5432
+DATABASE_NAME=cms
+DATABASE_USERNAME=admin
+DATABASE_PASSWORD=admin
