seeding tarif and admin & tariff info on personal stock

--- a/.env.example
+++ b/.env.example
@@ -15,4 +15,13 @@ DATABASE_CLIENT=postgres
 DATABASE_PORT=5432
 DATABASE_NAME=cms
 DATABASE_USERNAME=admin
-DATABASE_PASSWORD=admin
+DATABASE_PASSWORD=
+
+# for seeding the db
+ADMIN_EMAIL="example@example.com"
+ADMIN_PASSWORD="strongpassword"
+
+
+#resend 
+RESEND_API_KEY = "apikey"
+RESEND_CONFIRM_URL="http://localhost:3000/auth/new-verification"
