--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "prettier": "prettier -w .",
-    "test": "jest"
+    "test": "jest",
+    "prisma-seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.2.0",
@@ -74,6 +75,7 @@
     "prettier-plugin-tailwindcss": "^0.5.14",
     "prisma": "^5.13.0",
     "tailwindcss": "^3.3.0",
+    "tsx": "^4.19.0",
     "typescript": "^5"
   }
 }
