--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tanstack/react-query": "^5.28.4",
     "@tanstack/react-table": "^8.13.2",
     "@trpc/client": "^10.45.2",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
