--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "compilerOptions": {
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -19,10 +23,22 @@
       }
     ],
     "paths": {
-        "@/*": ["./src/*"],
-        "@/globalStyles*": ["./src/app/styles/globals.css"]
-      }
+      "@/*": [
+        "./src/*"
+      ],
+      "@/globalStyles*": [
+        "./src/app/styles/globals.css"
+      ]
+    }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/entities/user/types/**/*.d.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
