--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "@tanstack/react-table": "^8.13.2",
     "@trpc/client": "^10.45.2",
     "axios": "^1.7.7",
-    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cuid": "^3.0.0",
     "jose": "^5.9.3",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.381.0",
     "next": "^14.2.3",
@@ -59,6 +59,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie": "^0.6.0",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash-es": "^4.17.12",
     "@types/next-auth": "^3.15.0",
     "@types/node": "^20",
