--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "src/entities/user/types/**/*.d.ts"
-  ],
+, "src/widgets/sidebar/model/menu-groups.tsx"  ],
   "exclude": [
     "node_modules"
   ]
