--- a/package.json
+++ b/package.json
@@ -11,9 +11,6 @@
     "test": "jest"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.2.0",
-    "@aws-sdk/client-s3": "^3.490.0",
-    "@aws-sdk/lib-storage": "^3.490.0",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -28,61 +25,36 @@
     "@tanstack/match-sorter-utils": "^8.11.8",
     "@tanstack/react-query": "^5.59.20",
     "@tanstack/react-table": "^8.13.2",
-    "@trpc/client": "^10.45.2",
-    "axios": "^1.7.7",
-    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "cuid": "^3.0.0",
     "jose": "^5.9.3",
-    "js-cookie": "^3.0.5",
-    "jsonwebtoken": "^9.0.2",
-    "lodash-es": "^4.17.21",
     "lucide-react": "^0.381.0",
     "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.19",
     "next-themes": "^0.2.1",
-    "nodemailer": "^6.9.12",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
     "resend": "^3.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^10.0.0",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz",
-    "zod": "^3.22.4",
-    "zustand": "^5.0.0-rc.2"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^15.1.0",
-    "@types/bcrypt": "^5.0.2",
-    "@types/bcryptjs": "^2.4.6",
     "@types/cookie": "^0.6.0",
-    "@types/jest": "^29.5.12",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/lodash-es": "^4.17.12",
-    "@types/next-auth": "^3.15.0",
     "@types/node": "^20",
-    "@types/nodemailer": "^6.4.14",
     "@types/qs": "^6.9.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.42.1",
-    "@typescript-eslint/parser": "^5.42.1",
     "autoprefixer": "^10.0.1",
-    "babel-jest": "^29.7.0",
+    "depcheck": "^1.4.7",
     "eslint": "^8",
     "eslint-config-next": "^15.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-unused-imports": "^4.1.4",
     "jest": "^29.7.0",
-    "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.3.0",
-    "tsx": "^4.19.0",
     "typescript": "^5"
   }
 }
