--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,5 +35,5 @@ jobs:
           cache: "npm"
       - run: npm ci
       # - run: npm run build --if-present
-      - run: echo $(pwd)"
+      - run: echo "$(pwd)"
       # - run: pm2 restart 4
