--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,6 +34,6 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
       - run: npm ci
-      # - run: npm run build --if-present
+      - run: npm run build --if-present
       - run: echo "$(pwd)"
-      # - run: pm2 restart 4
+      - run: pm2 restart 4
