--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,19 +13,7 @@ jobs:
     strategy:
       matrix:
         node-version: [22.x]
-    env:
-      JWT_SECRET: ${JWT_SECRET}
-      NEXTAUTH_URL: ${NEXTAUTH_URL}
-      NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
-      NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
-      AUTH_TRUST_HOST: ${AUTH_TRUST_HOST}
-      YANDEX_CLIENT_ID: ${YANDEX_CLIENT_ID}
-      YANDEX_CLIENT_SECRET: ${YANDEX_CLIENT_SECRET}
-      ADMIN_EMAIL: ${ADMIN_EMAIL}
-      ADMIN_PASSWORD: ${ADMIN_PASSWORD}
-      RESEND_API_KEY: ${RESEND_API_KEY}
-      RESEND_CONFIRM_UR: ${RESEND_CONFIRM_UR}
-      RESEND_RESET_PASS_LINK: ${RESEND_RESET_PASS_LINK}
+
     steps:
       - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
@@ -36,4 +24,19 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       - run: echo "$(pwd)"
+      - run: |
+          echo "JWT_SECRET= ${{ secrets.JWT_SECRET }}" >> .env
+          echo "NEXTAUTH_URL= ${{ secrets.NEXTAUTH_URL }}" >> .env
+          echo "NEXT_PUBLIC_API_URL= ${{ secrets.NEXT_PUBLIC_API_URL }}" >> .env
+          echo "NEXTAUTH_SECRET= ${{ secrets.NEXTAUTH_SECRET }}" >> .env
+          echo "AUTH_TRUST_HOST= ${{ secrets.AUTH_TRUST_HOST }}" >> .env
+          echo "YANDEX_CLIENT_ID= ${{ secrets.YANDEX_CLIENT_ID }}" >> .env
+          echo "YANDEX_CLIENT_SECRET= ${{ secrets.YANDEX_CLIENT_SECRET }}" >> .env
+          echo "ADMIN_EMAIL= ${{ secrets.ADMIN_EMAIL }}" >> .env
+          echo "ADMIN_PASSWORD= ${{ secrets.ADMIN_PASSWORD }}" >> .env
+          echo "RESEND_API_KEY= ${{ secrets.RESEND_API_KEY }}" >> .env
+          echo "RESEND_CONFIRM_UR= ${{ secrets.RESEND_CONFIRM_UR }}" >> .env
+          echo "RESEND_RESET_PASS_LINK= ${{ secrets.RESEND_RESET_PASS_LINK }}" >> .env
+      - run: |
+          scp -o StrictHostKeyChecking=no .env admin2@lfrgxxjmck: .
       - run: pm2 restart 4
