--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,7 +15,13 @@ jobs:
         node-version: [22.x]
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Pull or Clone Repository
+        run: |
+          if [ -d ".git" ]; then
+            git pull origin main
+          else
+            git clone https://github.com/username/repo.git .
+          fi
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
@@ -23,13 +29,4 @@ jobs:
           cache: "npm"
       - run: npm ci
       - run: npm run build --if-present
-      - run: echo "$(pwd)"
-      - name: Preserve .env
-        run: |
-          cp .env ../.env.bak || echo "No existing .env"
-      - run: npm ci
-      - run: npm run build --if-present
-      - name: Restore .env
-        run: |
-          mv ../.env.bak .env || echo "No .env to restore"
       - run: pm2 restart 4
