--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,15 +13,13 @@ jobs:
     strategy:
       matrix:
         node-version: [22.x]
+        
 
     steps:
-      - name: Pull or Clone Repository
-        run: |
-          if [ -d ".git" ]; then
-            git pull origin main
-          else
-            git clone https://github.com/RuslanKharisov/onstock-client.git .
-          fi
+      - run: echo "$(pwd)"
+      - run: |
+            cp .env ../.env.bak || echo "No existing .env"
+      - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
@@ -29,4 +27,10 @@ jobs:
           cache: "npm"
       - run: npm ci
       - run: npm run build --if-present
+      - run: echo "$(pwd)"
+      - run: npm ci
+      - run: npm run build --if-present
+      - name: Restore .env
+        run: |
+          mv ../.env.bak .env || echo "No .env to restore"
       - run: pm2 restart 4
