--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,4 +33,4 @@ jobs:
       - run: echo "$(pwd)"
       - run: npm ci
       - run: npm run build --if-present
-      - run: pm2 restart 4
+      # - run: pm2 restart 4
