--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@react-input/mask": "^2.0.4",
     "@tanstack/match-sorter-utils": "^8.11.8",
     "@tanstack/react-query": "^5.59.20",
     "@tanstack/react-table": "^8.13.2",
