--- a/.env.production
+++ b/.env.production
@@ -10,3 +10,5 @@ YANDEX_CLIENT_ID="198d88f30863474a9091524f1757325a"
 YANDEX_CLIENT_SECRET="47a0c5b85f714f4b81d9fb8d264bb427"
 
 
+WHATSAPP=79178696482
+TELEGRAM=https://t.me/rusl_dev
