--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
+NODE_ENV=production
 
 NEXTAUTH_URL=https://prom-stock.ru
 NEXT_PUBLIC_API_URL=https://prom-stock.ru/apiserv/
@@ -10,5 +11,5 @@ YANDEX_CLIENT_ID="198d88f30863474a9091524f1757325a"
 YANDEX_CLIENT_SECRET="47a0c5b85f714f4b81d9fb8d264bb427"
 
 
-WHATSAPP=79178696482
-TELEGRAM=https://t.me/rusl_dev
+NEXT_WHATSAPP=79178696482
+NEXT_TELEGRAM=https://t.me/rusl_dev
