--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
+    "react-markdown": "^9.0.3",
     "react-yandex-metrika": "^2.6.0",
     "resend": "^3.4.0",
     "tailwind-merge": "^2.2.1",
