--- a/package.json
+++ b/package.json
@@ -26,8 +26,12 @@
     "@tanstack/match-sorter-utils": "^8.11.8",
     "@tanstack/react-query": "^5.59.20",
     "@tanstack/react-table": "^8.13.2",
+    "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "fumadocs-core": "^14.7.7",
+    "fumadocs-mdx": "^11.3.1",
+    "fumadocs-ui": "^14.7.7",
     "jose": "^5.9.3",
     "lucide-react": "^0.381.0",
     "next": "^14.2.3",
