--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 
 NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_SECRET=";ajsf;jasd8fp93kljm9a843kj;lakjd9874-09j;ladkjf0s"
+NEXTAUTH_SECRET=";ajsf;jasd8fp93kljm9a843.............."
 NEXT_PUBLIC_API_URL="http://localhost:3000"
 
-YANDEX_CLIENT_ID="198d88f30863474a9091524f1757325a"
-YANDEX_CLIENT_SECRET="47a0c5b85f714f4b81d9fb8d264bb427"
+YANDEX_CLIENT_ID="198d88f30863474a............"
+YANDEX_CLIENT_SECRET="47a0c5b85f71..........."
