--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -59,4 +59,4 @@ jobs:
             nextjs-${{ runner.os }}-${{ matrix.node-version }}-
 
       - run: npm run build --if-present
-      - run: pm2 restart nextjs --update-env
+      - run: pm2 restart 1 --update-env
