--- a/package.json
+++ b/package.json
@@ -34,11 +34,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.4",
-    "fumadocs-core": "^14.7.7",
-    "fumadocs-mdx": "^11.3.1",
-    "fumadocs-ui": "^14.7.7",
+    "gray-matter": "^4.0.3",
     "jose": "^5.9.3",
-    "lucide-react": "^0.381.0",
     "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.19",
     "next-themes": "^0.2.1",
